cut out/shortened some paragraphs. now within page limit

--- a/Final Report.Rmd
+++ b/Final Report.Rmd
@@ -431,15 +431,11 @@ P(\text{Strong Hand}\mid\text{Heavy Bet})&=\frac{P(\text{Heavy Bet}\mid\text{Str
 
 The updated belief is that there’s an 83.3% chance the opponent has a strong hand. This change in perspective impacts how the player decides to act. If the opponent has a strong hand, they may be holding a straight or a flush, leading to their win. In that scenario, folding could be the best move. However, if the player still thinks there’s a chance the opponent is bluffing—despite the high likelihood of a strong hand—they might decide to call or even raise, depending on how much risk they’re willing to take and their overall strategy.
 
-While Bayesian Networks are great for looking at individual hands and making short-term decisions, Hidden Markov Models (HMMs) are better for understanding long-term behavior in games like poker. An HMM works on the idea that the system moves between hidden states, which then affect what you can actually see happening in the game.
-
-In poker, hidden states could reflect a player’s underlying strategy, like whether they’re bluffing, playing it safe, or being aggressive. Even though you can’t see these states directly, you can pick up on their influence by looking at the actions a player takes over several rounds.
-
-Using HMMs, players can spot trends in how their opponents behave. For instance, if someone often raises before the flop but tends to fold afterward, the model might suggest that they’re likely bluffing before the flop. Over time, it picks up on the chances of moving between different behaviors, helping players predict what their opponents might do next based on what they’ve seen in the past. This is how HMMs help players adjust their strategy over a series of hands instead of looking at each decision on its own. This approach is especially useful in tournaments, where grasping long-term behavior patterns can give you an edge over the competition.
+In poker, hidden states could reflect a player’s underlying strategy, like whether they’re bluffing, playing it safe, or being aggressive. For instance, if someone often raises before the flop but tends to fold afterward, the model might suggest that they’re likely bluffing before the flop. Even though you can’t see these states directly, you can pick up on their influence by looking at the actions a player takes over several rounds.
 
 ## In-Depth Bayesian Network Structure and Inference
 
-Inference using a Bayesian Network. A simple way to explain how poker can use Bayesian Inference is to model an opponent’s playstyle using a Bayesian Network. Implementing the above, we first define our Nodes. We will only be implementing a Bayesian Network that models Opponent Hand Strength, but a BN that networks the game better will have several more nodes and be more suited for post-game analysis. For the sake of this paper, we will be showing a simpler example of a 1v1 Texas Hold'em Poker scenario. Let's have 4 action nodes, one for each phase of a poker round. Now in each one of these phases, the opponent may bet/raise, call, check, fold. The preflop you may call, raise, and fold. Our belief nodes will be nodes that represent hand strength at each state of the game (3 Belief Buckets of Strong Medium and Weak for efficiency purposes). We can use Bayes inference to dynamically update our belief of the opponent's hand strength. Let board cards be the cards revealed to the table each phase. Our final BN for poker is designed to infer hidden game states that help us make better decisions against our opponents. We use betting actions to calculate whether our opponent has a strong hand or not, and we can also predict their next round based on known betting tendencies or strategies. The edges of the Bayesian Network represent conditional probabilities. These conditional probabilities change as evidence updates. Bucketing comes into play by simplifying the network via grouping similar values, as the poker state space is massive (instead of focusing on “7-2 pair” vs “Pocket Aces”, we can group them by non-suited non-pairs and non-suited pairs).
+A simple way to explain how poker can use Bayesian Inference is to model an opponent’s playstyle using a Bayesian Network. Implementing the above, we first define our Nodes. We will only be implementing a Bayesian Network that models Opponent Hand Strength, but a BN that networks the game better will have several more nodes and be more suited for post-game analysis. For the sake of this paper, we will be showing a simpler example of a 1v1 Texas Hold'em Poker scenario. Let's have 4 action nodes, one for each phase of a poker round. Now in each one of these phases, the opponent may bet/raise, call, check, fold. The preflop you may call, raise, and fold. Our belief nodes will be nodes that represent hand strength at each state of the game (3 Belief Buckets of Strong Medium and Weak for efficiency purposes). We can use Bayes inference to dynamically update our belief of the opponent's hand strength. Let board cards be the cards revealed to the table each phase. Our final BN for poker is designed to infer hidden game states that help us make better decisions against our opponents. We use betting actions to calculate whether our opponent has a strong hand or not, and we can also predict their next round based on known betting tendencies or strategies. The edges of the Bayesian Network represent conditional probabilities. These conditional probabilities change as evidence updates. Bucketing comes into play by simplifying the network via grouping similar values, as the poker state space is massive (instead of focusing on “7-2 pair” vs “Pocket Aces”, we can group them by non-suited non-pairs and non-suited pairs).
 
 ![](images/clipboard-261684126.png){width="326"}
 
